--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -115,7 +115,12 @@
         content: content
       })
     })
-            .then(response => response.json())
+            .then(response => {
+              if (!response.ok) {
+                throw new Error('Network response was not ok');
+              }
+              return response.json();
+            })
             .then(data => {
               alert('Schedule created successfully!');
               console.log('Schedule created:', data);
